--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <nav>
                         <ol>
                             <li><a href="/aula01.html">Somente Console</a></li>
-                            <li></li>
+                            <li><a href="/aula02.html">Arrays e Funções</a></li>
                             <li></li>
                             <li></li>
                             <li></li>
