Atualização visual index (Em Andamento)

--- a/Aula02/aula02.html
+++ b/Aula02/aula02.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 
+    <a href="/index.html"> - Voltar ao menu principal</a>
+
     <h1>A maior parte está no console</h1>
 
     <button onclick="definirArray()" class="btn btn-outline-primary">Aprender a definir um Array</button>
