--- a/index.html
+++ b/index.html
@@ -11,27 +11,30 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
-<body class="container">
+<body class="container bg-info pt-1">
 
     <header class="row">
-        <section class="col">
+        <div class="col"></div>
+        <section class="col-10">
             <div class="card">
-                <div class="card-body">
+                <div class="card-body text-center">
                     Aulas Javascript
                 </div>
             </div>
         </section>
+        <div class="col"></div>
     </header>
 
-    <main class="row">
-        <section class="col">
+    <main class="row pt-1">
+        <div class="col"></div>
+        <section class="col-10">
             <div class="card">
-                <div class="card-body">
+                <div class="card-body text-center">
                     <nav>
-                        <ol>
-                            <li><a href="/aula01.html">Somente Console</a></li>
-                            <li><a href="/aula02.html">Arrays e Funções</a></li>
-                            <li></li>
+                        <ol style="list-style: none;">
+                            <li><a href="/Aula01/aula01.html">Somente Console</a></li>
+                            <li><a href="/Aula02/aula02.html">Arrays e Funções</a></li>
+                            <li><a href="/Aula03/aula03.html">Manipulando HTML</a></li>
                             <li></li>
                             <li></li>
                             <li></li>
@@ -42,6 +45,7 @@
                 </div>
             </div>
         </section>
+        <div class="col"></div>
     </main>
 
 
