--- a/Aula01/aula01.html
+++ b/Aula01/aula01.html
@@ -10,6 +10,8 @@
 
 <body>
 
+    <a href="/index.html"> - Voltar ao menu principal</a>
+
     <script src="/js/escondendo_codigo.js"></script> 
 </body>
 
