--- a/Aula01/aula01.html
+++ b/Aula01/aula01.html
@@ -8,9 +8,11 @@
     <title>Aula01 - Javascript</title>
 </head>
 
-<body>
+<body class="bg-info">
 
     <a href="/index.html"> - Voltar ao menu principal</a>
+
+    <p>Todo o conteúdo está no console.</p>
 
     <script src="/js/escondendo_codigo.js"></script> 
 </body>
