--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li><a href="/Aula01/aula01.html">Somente Console</a></li>
                             <li><a href="/Aula02/aula02.html">Arrays e Funções</a></li>
                             <li><a href="/Aula03/aula03.html">Manipulando HTML</a></li>
-                            <li></li>
+                            <li><a href="/Aula04/aula04.html">Manipulando HTML com JQuery</a></li>
                             <li></li>
                             <li></li>
                             <li></li>
