--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <li><a href="/Aula02/aula02.html">Arrays e Funções</a></li>
                             <li><a href="/Aula03/aula03.html">Manipulando HTML</a></li>
                             <li><a href="/Aula04/aula04.html">Manipulando HTML com JQuery</a></li>
-                            <li></li>
+                            <li><a href="/Aula05/aula05.html">Criando Página usando JQuery</a></li>
                             <li></li>
                             <li></li>
                             <li></li>
@@ -47,7 +47,6 @@
         </section>
         <div class="col"></div>
     </main>
-
 
 
 
