--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <li><a href="/Aula03/aula03.html">Manipulando HTML</a></li>
                             <li><a href="/Aula04/aula04.html">Manipulando HTML com JQuery</a></li>
                             <li><a href="/Aula05/aula05.html">Criando Página usando JQuery</a></li>
-                            <li></li>
+                            <li><a href="/Aula06/aula06.html">Acessar API's com Ajax</a></li>
                             <li></li>
                             <li></li>
                         </ol>
